# Trebuchet

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  python-app.yml
docs/: index.html  styles.css
src/: parse.py
tests/: test_module.py  test_parse.py
